--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img lass="img-fluid" src="img/background1.jpg">
+					<img lass="img-fluid" src="img/carouselImgs/background1.jpg">
 					<div class="carousel-caption">
 						<h1 class="display-2"> Fast Development </h1>
 						<h3> Complete efficiency and the best team </h3>
@@ -67,7 +67,7 @@
 				</div>
 
 				<div class="carousel-item">
-					<img lass="img-fluid" src="img/background2.jpg">
+					<img lass="img-fluid" src="img/carouselImgs/background2.jpg">
 					<div class="carousel-caption">
 						<h1 class="display-2"> Fast Development </h1>
 						<h3> Complete efficiency and the best team </h3>
@@ -77,7 +77,7 @@
 				</div>
 
 				<div class="carousel-item">
-					<img class="img-fluid" src="img/background3.jpg">
+					<img class="img-fluid" src="img/carouselImgs/background3.jpg">
 					<div class="carousel-caption">
 						<h1 class="display-2"> Fast Development </h1>
 						<h3> Complete efficiency and the best team </h3>
@@ -263,18 +263,14 @@
 		<!-- Our Philosophy -->
 		<div class="container-fluid padding">
 				<div class="row padding text-center">
-					<div class="col-lg-6">
+					<div class="col-lg-6 col-md-6">
 						<h2> Our Philosophy </h2>
 						<p>
-								Lorem ipsum, dolor sit amet consectetur 
-								adipisicing elit. Doloremque saepe qui 
-								tenetur minima alias earum, rem officiis 
-								odit ex? Deserunt molestias ullam molestiae 
-								nesciunt quos vel, asperiores optio velit illo!
+								Work smart with the best team!
 						</p>
 					</div>
-					<div class="col-lg-6">
-						<img class="img-fluid rounded" src="img/varsNotWar.jpg">
+					<div class="col-lg-6 col-md-6">
+						<img class="img-fluid rounded" src="img/workSmart.jpg">
 					</div>
 				</div>
 			</div>
@@ -316,12 +312,13 @@
 					<hr class="light">
 					<h5> Service Area </h5>
 					<hr class="light">
+					<p> Based in: Makhanda </p> 
 					<p> Eastern Cape Province </p>
 				</div>
 
 				<div class="col-12">
 					<hr class="light">
-					<h5>&copy; lizhacksa.co.za</h5>
+					<h5>&copy; LizHack SA Devs </h5>
 				</div>
 			</div>
 		</footer>
