--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- Logo  -->
 		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#"> 
+				<a class="navbar-brand" href="https://lizhacksa.ml/"> 
 					<img src="img/logo2.png">	
 				</a>
 				
@@ -28,19 +28,19 @@
 				<div class="collapse navbar-collapse" id="navBarMenu">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="#">Home</a>
+							<a class="nav-link disabled" href="#">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">About</a>
+							<a class="nav-link disabled" href="#">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Services</a>
+							<a class="nav-link disabled" href="#">Services</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Team</a>
+							<a class="nav-link disabled" href="#">Team</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Connect</a>
+							<a class="nav-link disabled" href="#">Connect</a>
 						</li>
 					</ul>
 				</div>
@@ -58,38 +58,41 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img lass="img-fluid" src="img/carouselImgs/background1.jpg">
-					<div class="carousel-caption">
+					<div class="carousel-caption rounded">
+						<h1 class="display-2"> Coming Soon!  </h1>
 						<h1 class="display-2"> Fast Development </h1>
 						<h3> Complete efficiency and the best team </h3>
-						<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
-						<button class="btn btn-primary btn-lg"> Get Quotation </button>
+					<!--	<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
+						<button class="btn btn-primary btn-lg"> Get Quotation </button> -->
 					</div>
 				</div>
 
 				<div class="carousel-item">
 					<img lass="img-fluid" src="img/carouselImgs/background2.jpg">
-					<div class="carousel-caption">
+					<div class="carousel-caption rounded">
+						<h1 class="display-2"> Coming Soon!  </h1>
 						<h1 class="display-2"> Fast Development </h1>
 						<h3> Complete efficiency and the best team </h3>
-						<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
-						<button class="btn btn-primary btn-lg"> Get Quotation </button>
+					<!--	<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
+						<button class="btn btn-primary btn-lg"> Get Quotation </button> -->
 					</div>
 				</div>
 
 				<div class="carousel-item">
 					<img class="img-fluid" src="img/carouselImgs/background3.jpg">
-					<div class="carousel-caption">
+					<div class="carousel-caption rounded">
+						<h1 class="display-2"> Coming Soon!  </h1>
 						<h1 class="display-2"> Fast Development </h1>
 						<h3> Complete efficiency and the best team </h3>
-						<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
-						<button class="btn btn-primary btn-lg"> Get Quotation </button>
+					<!--	<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
+						<button class="btn btn-primary btn-lg"> Get Quotation </button> -->
 					</div>
 				</div>
 
 			</div>
 		</div>
-
-		<!-- Jumbotron  -->
+		
+		<!-- Jumbotron  
 		<div class="container-fluid">
 			<div class="row jumbotron">
 				<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
@@ -104,9 +107,9 @@
 					</a>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
-		<!-- Welcome  -->
+		<!-- Welcome  
 		<div class="container-fluid padding">
 			<div class="row welcome text-center">
 				<div class="col-12">
@@ -123,10 +126,10 @@
 					</p>
 				</div>
 			</div>
-		</div>
+		</div>-->
 
 		<!-- Tools used  -->
-		<!-- Three column section  -->
+		<!-- Three column section  
 		<div class="container-fluid padding">
 			<div class="row text-center padding">
 				<div class="col-sm-6 col-md-3">
@@ -156,9 +159,9 @@
 
 			<hr class="my-4">
 		
-		</div>
+		</div> -->
 
-		<!-- Two Column section -->
+		<!-- Two Column section 
 		<div class="container-fluid padding">
 			<div class="row text-center">
 				<div class="col-lg-6">
@@ -195,15 +198,18 @@
 			</div>
 		</div>
 
-		<hr class="my-4">
-		<!-- Fixed Image  -->
+		<hr class="my-4"> 
+	-->
+		<!-- Fixed Image 
 		<figure>
 			<div class="fixed-wrap">
 				<div id="fixed"></div>
 			</div>
 		</figure>
 
-		<!-- Meet The team  -->
+		 -->
+
+		<!-- Meet The team 
 		<div class="container-fluid">
 			<div class="row welcome text-center">
 				<div class="col-12">
@@ -213,8 +219,8 @@
 			</div>
 
 		</div>
-
-		<!-- Cards  -->
+ -->
+		<!-- Cards 
 		<div class="container-fluid padding">
 			<div class="row padding">
 				<div class="col-md-4">
@@ -259,8 +265,8 @@
 				</div>
 			</div>
 		</div>
-
-		<!-- Our Philosophy -->
+ -->
+		<!-- Our Philosophy
 		<div class="container-fluid padding">
 				<div class="row padding text-center">
 					<div class="col-lg-6 col-md-6">
@@ -273,24 +279,25 @@
 						<img class="img-fluid rounded" src="img/workSmart.jpg">
 					</div>
 				</div>
-			</div>
-	
-		<!-- connect  -->
+		-->
+	</div>
+
+		<!-- connect 
 		<div class="container-fluid padding">
 			<div class="row text-center">
 				<div class="col-12">
 					<h2> Connect </h2>
 				</div>
 				<div class="col-12 social padding">
-					<a href="#"><i class="fab fa-facebook"></i></a>
+					<a href="https://www.facebook.com/lizhacksa"><i class="fab fa-facebook"></i></a>
 					<a href="#"><i class="fab fa-twitter"></i></a>
 					<a href="#"><i class="fab fa-instagram"></i></a>
 					<a href="#"><i class="fab fa-github"></i></a>
 				</div>
 			</div>
-		</div>
+		</div>  -->
 
-		<!-- Footer -->
+		<!-- Footer 
 		<footer class="container-fluid padding">
 			<div class="row text-center">
 				<div class="col-md-4">
@@ -321,7 +328,7 @@
 					<h5>&copy; LizHack SA Devs </h5>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 
 		<!-- Scripts  -->
 		<script src="js/jquery-3.4.1.min.js"></script>
@@ -330,5 +337,4 @@
 		<script src="js/all.js"></script>
 		
 	</body>
-
 </html>
