--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
 		<!-- Logo  -->
 		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="https://lizhacksa.ml/"> 
+			<div class="container-fluid row">
+				<a class="navbar-brand text-center ml-4 col-sm-6 col-md-4 col-lg-4 col-xl-4 m-auto" href="https://lizhacksa.ml/"> 
 					<img src="img/logo2.png">	
 				</a>
 				
 				<!-- Navbar burger icon -->
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBarMenu">
+				<button class="navbar-toggler text-center ml-4 col-sm-2 col-md-8 col-lg-8 col-xl-8" type="button" data-toggle="collapse" data-target="#navBarMenu">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
 				<!-- Menu Items -->
-				<div class="collapse navbar-collapse" id="navBarMenu">
+				<div class="collapse navbar-collapse text-center" id="navBarMenu">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
 							<a class="nav-link disabled" href="#">Home</a>
@@ -49,50 +49,42 @@
 
 		<!-- Image Slider  -->
 		<div id="Slides" class="carousel slide" data-ride="carousel">
-			<ul class="carousel-indicators">
-				<li data-target="#slides" data-slide-to="0" class="active"></li>
-				<li data-target="#slides" data-slide-to="1"></li>
-				<li data-target="#slides" data-slide-to="2"></li>
-			</ul>
 
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img lass="img-fluid" src="img/carouselImgs/background1.jpg">
 					<div class="carousel-caption rounded">
-						<h1 class="display-2"> Coming Soon!  </h1>
 						<h1 class="display-2"> Fast Development </h1>
 						<h3> Complete efficiency and the best team </h3>
-					<!--	<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
-						<button class="btn btn-primary btn-lg"> Get Quotation </button> -->
+						<button class="btn btn-outline-light btn-lg" href="#"> View Recent Projects </button>
+						<button class="btn btn-primary btn-lg" href="#"> Get Quotation </button>
 					</div>
 				</div>
 
 				<div class="carousel-item">
 					<img lass="img-fluid" src="img/carouselImgs/background2.jpg">
 					<div class="carousel-caption rounded">
-						<h1 class="display-2"> Coming Soon!  </h1>
-						<h1 class="display-2"> Fast Development </h1>
-						<h3> Complete efficiency and the best team </h3>
-					<!--	<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
-						<button class="btn btn-primary btn-lg"> Get Quotation </button> -->
+						<h1 class="display-2"> Responsive Web Development </h1>
+						<h3> We develop websites that are responsive, every device has chance to view.  </h3>
+						<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
+						<button class="btn btn-primary btn-lg"> Get Quotation </button>
 					</div>
 				</div>
 
 				<div class="carousel-item">
 					<img class="img-fluid" src="img/carouselImgs/background3.jpg">
 					<div class="carousel-caption rounded">
-						<h1 class="display-2"> Coming Soon!  </h1>
-						<h1 class="display-2"> Fast Development </h1>
+						<h1 class="display-2"> Efficient Web design </h1>
 						<h3> Complete efficiency and the best team </h3>
-					<!--	<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
-						<button class="btn btn-primary btn-lg"> Get Quotation </button> -->
+						<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
+						<button class="btn btn-primary btn-lg"> Get Quotation </button>
 					</div>
 				</div>
 
 			</div>
 		</div>
 		
-		<!-- Jumbotron  
+		<!-- Jumbotron  -->
 		<div class="container-fluid">
 			<div class="row jumbotron">
 				<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
@@ -107,7 +99,7 @@
 					</a>
 				</div>
 			</div>
-		</div> -->
+		</div> 
 
 		<!-- Welcome  
 		<div class="container-fluid padding">
