--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 				<div class="collapse navbar-collapse text-center" id="navBarMenu">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
-							<a class="nav-link disabled" href="#">Home</a>
+							<a class="nav-link" href="https://lizhacksa.ml">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#">About</a>
+							<a class="nav-link" href="#">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Services</a>
+							<a class="nav-link" href="#">Services</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Team</a>
+							<a class="nav-link" href="#">Team</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Connect</a>
+							<a class="nav-link" href="#">Connect</a>
 						</li>
 					</ul>
 				</div>
@@ -52,48 +52,106 @@
 
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img lass="img-fluid" src="img/carouselImgs/background1.jpg">
-					<div class="carousel-caption rounded">
-						<h1 class="display-2"> Fast Development </h1>
-						<h3> Complete efficiency and the best team </h3>
-						<button class="btn btn-outline-light btn-lg" href="#"> View Recent Projects </button>
-						<button class="btn btn-primary btn-lg" href="#"> Get Quotation </button>
+					<div class="slide1">
+						<div class="container rounded">
+							<h1 class="display-2"> Fast Development </h1>
+							<h3> Complete efficiency and the best team </h3>
+							<button type="button" class="btn btn-outline-light btn-lg disabled" href="#"> View Recent Projects </button>
+							<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#GetAQuote"> Get Quotation </button>
+						</div>
 					</div>
 				</div>
 
 				<div class="carousel-item">
-					<img lass="img-fluid" src="img/carouselImgs/background2.jpg">
-					<div class="carousel-caption rounded">
-						<h1 class="display-2"> Responsive Web Development </h1>
-						<h3> We develop websites that are responsive, every device has chance to view.  </h3>
-						<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
-						<button class="btn btn-primary btn-lg"> Get Quotation </button>
+					<div class="slide2">
+						<div class="container rounded">
+							<h1 class="display-2"> Responsive Web Development </h1>
+							<h3> We develop websites that are responsive, every device has chance to view.  </h3>
+							<button type="button" class="btn btn-outline-light btn-lg disabled"> View Recent Projects </button>
+							<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#GetAQuote"> Get Quotation </button>
+						</div>
 					</div>
 				</div>
 
 				<div class="carousel-item">
-					<img class="img-fluid" src="img/carouselImgs/background3.jpg">
-					<div class="carousel-caption rounded">
-						<h1 class="display-2"> Efficient Web design </h1>
-						<h3> Complete efficiency and the best team </h3>
-						<button class="btn btn-outline-light btn-lg"> View Recent Projects </button>
-						<button class="btn btn-primary btn-lg"> Get Quotation </button>
+					<div class="slide3">
+						<div class="container rounded">
+							<h1 class="display-2"> Efficient Web design </h1>
+							<h3> Complete efficiency and the best team </h3>
+							<button type="button" class="btn btn-outline-light btn-lg disabled"> View Recent Projects </button>
+							<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#GetAQuote"> Get Quotation </button>
+						</div>
 					</div>
 				</div>
 
 			</div>
 		</div>
 		
+	  	<!-- Get Quote Modal -->
+		<div class="modal fade" id="GetAQuote" tabindex="-1" role="dialog" aria-labelledby="GetAQuoteLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+			<div class="modal-content">
+
+				<div class="modal-header">
+					<h5 class="modal-title" id="GetAQuoteLabel"> Get A Quote </h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+
+				<div class="modal-body">
+					<!-- Once server is up connect to the db -->
+					<form>
+						<div class="form-row">
+							<div class="form-group col">
+								<label for="fName"> Name </label>
+								<input type="text" class="form-control" name="FnameOfUser" placeholder="Name" id="fName">
+							</div>
+							<div class="form-group col">
+								<label for="sName"> Surname </label>
+								<input type="text" class="form-control" name="SnameOfUser" placeholder="Surname Name" id="sName">
+							</div>
+						</div>
+						
+						<div class="form-group">
+							<label for="email"> Email </label>
+							<input type="email" class="form-control" name="emailAddress" placeholder="Email address" id="email">
+						</div>
+
+						<div class="input-group mb-3">
+							<select class="custom-select" id="serviceOptions">
+								<option selected>Choose...</option>
+								<option value="1"> Web Design </option>
+								<option value="2"> Web Development </option>
+								<option value="3"> Web Design & Development </option>
+							</select>
+							<div class="input-group-append">
+								<label class="input-group-text" for="serviceOptions">Service Options</label>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label for="AdditionalInfo">Additional Info</label>
+							<textarea class="form-control" id="AdditionalInfo" name="AddInfo" rows="3"></textarea>
+						</div>
+						<button type="submit" class="btn btn-primary"> Submit </button>
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</form>
+				</div>
+			</div>
+			</div>
+		</div>
+
 		<!-- Jumbotron  -->
-		<div class="container-fluid">
+		<div class="container-fluid text-center">
 			<div class="row jumbotron">
-				<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+				<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10 m-auto">
 					<p class="lead">
 						Please go to <a href="#" class="btn btn-primary"> Services </a> to view the services we provide 
 						and many more.
 					</p>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-3 col-lg-9 col-xl-2">
+				<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2 m-auto">
 					<a href="#"> 
 						<button type="button" class="btn btn-outline-secondary btn-lg"> Services </button> 
 					</a>
@@ -101,7 +159,7 @@
 			</div>
 		</div> 
 
-		<!-- Welcome  
+		<!-- Welcome -->
 		<div class="container-fluid padding">
 			<div class="row welcome text-center">
 				<div class="col-12">
@@ -113,15 +171,17 @@
 				<div class="col-12">
 					<p class="lead">
 						Welcome to LizHack SA Devs!
-						We offer different services and we are most prominent in the 
-						website design and development service.
 					</p>
+					<p> Please enjoy your stay. </p>
 				</div>
 			</div>
-		</div>-->
+		</div>
 
 		<!-- Tools used  -->
-		<!-- Three column section  
+		
+		<hr class="my-4">
+		
+		<!-- Three column section -->
 		<div class="container-fluid padding">
 			<div class="row text-center padding">
 				<div class="col-sm-6 col-md-3">
@@ -151,13 +211,13 @@
 
 			<hr class="my-4">
 		
-		</div> -->
+		</div>
 
-		<!-- Two Column section 
+		<!-- Two Column section -->
 		<div class="container-fluid padding">
 			<div class="row text-center">
 				<div class="col-lg-6">
-					<h2> Testimonials </h2>
+					<h2 class="display-4"> Testimonials </h2>
 
 					<div>
 						<h3> Little Ark Ministries </h3>
@@ -185,23 +245,23 @@
 				
 				</div>
 				<div class="col-lg-6">
-					<img class="img-fluid rounded" src="img/workTestimonial.jpg">
+					<img class="img-fluid rounded-pill" src="img/workTestimonial.jpg">
 				</div>
 			</div>
 		</div>
 
 		<hr class="my-4"> 
-	-->
-		<!-- Fixed Image 
+	
+		<!-- Fixed Image -->
 		<figure>
 			<div class="fixed-wrap">
 				<div id="fixed"></div>
 			</div>
 		</figure>
 
-		 -->
+		 
 
-		<!-- Meet The team 
+		<!-- Meet The team  -->
 		<div class="container-fluid">
 			<div class="row welcome text-center">
 				<div class="col-12">
@@ -211,70 +271,72 @@
 			</div>
 
 		</div>
- -->
-		<!-- Cards 
+
+		<!-- Cards -->
 		<div class="container-fluid padding">
 			<div class="row padding">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" src="img/team1.jpg">
+						<img class="card-img-top" src="img/sbuda.jpg">
 						<div class="card-body">
-							<h4 class="card-title"> Sibusiso Ncanywa</h4>
+							<h4 class="card-title"> Sibusiso Ncanywa </h4>
 							<p class="card-text">
-								Sibusiso is an undergraduate at Rhodes University, majoring in computer science and 
+								Sibusiso is an undergraduate student at Rhodes University, majoring in computer science and 
 								Music Theory And Analysis.
 							</p>
-							<a class="btn btn-outline-secondary"> See Profile </a>
+							<a class="btn btn-outline-secondary" href="#"> See Profile </a>
 						</div>
 
 					</div>
 				</div>
+
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" src="img/team1.jpg">
+						<img class="card-img-top" src="img/...">
 						<div class="card-body">
-							<h4 class="card-title"> Sibusiso Ncanywa</h4>
+							<h4 class="card-title"> Simpiwe Sobici </h4>
 							<p class="card-text">
-								Sibusiso is an undergraduate at Rhodes University, majoring in computer science and 
-								Music Theory And Analysis.
+								Simpiwe is an undergraduate student at Rhodes University, majoring in computer science.
 							</p>
-							<a class="btn btn-outline-secondary"> See Profile </a>
+							<a class="btn btn-outline-secondary" href="#"> See Profile </a>
 						</div>
 					</div>
 				</div>
+
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" src="img/team1.jpg">
+						<img class="card-img-top" src="img/...">
 						<div class="card-body">
-							<h4 class="card-title"> Sibusiso Ncanywa</h4>
+							<h4 class="card-title"> Bagcine Klaas </h4>
 							<p class="card-text">
-								Sibusiso is an undergraduate at Rhodes University, majoring in computer science and 
-								Music Theory And Analysis.
+								Bagcine is an undergraduate student at Rhodes University, majoring in Infomation Systems. 
 							</p>
-							<a class="btn btn-outline-secondary"> See Profile </a>
+							<a class="btn btn-outline-secondary" href="#"> See Profile </a>
 						</div>
 					</div>
 				</div>
-			</div>
 		</div>
- -->
-		<!-- Our Philosophy
-		<div class="container-fluid padding">
+ 
+		<!-- Our Philosophy -->
+		<div class="container-fluid padding philisophy">
 				<div class="row padding text-center">
 					<div class="col-lg-6 col-md-6">
 						<h2> Our Philosophy </h2>
 						<p>
-								Work smart with the best team!
+							Work smart with the best team!
+						</p>
+						<p>
+							Provivide the best customer service.
 						</p>
 					</div>
 					<div class="col-lg-6 col-md-6">
 						<img class="img-fluid rounded" src="img/workSmart.jpg">
 					</div>
 				</div>
-		-->
-	</div>
+		
+		</div>
 
-		<!-- connect 
+		<!-- connect -->
 		<div class="container-fluid padding">
 			<div class="row text-center">
 				<div class="col-12">
@@ -287,15 +349,15 @@
 					<a href="#"><i class="fab fa-github"></i></a>
 				</div>
 			</div>
-		</div>  -->
+		</div> 
 
-		<!-- Footer 
+		<!-- Footer -->
 		<footer class="container-fluid padding">
 			<div class="row text-center">
 				<div class="col-md-4">
 					<img class="img-fluid" src="img/logo2.png">
 					<hr class="light">
-					<p> +27 62 1905 431 </p>
+					<p> +27 62 3654 091 </p>
 					<p> lizhacksa@gmail.com </p>
 				</div>
 
@@ -320,7 +382,7 @@
 					<h5>&copy; LizHack SA Devs </h5>
 				</div>
 			</div>
-		</footer> -->
+		</footer> 
 
 		<!-- Scripts  -->
 		<script src="js/jquery-3.4.1.min.js"></script>
