--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 	<head>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Website design and development">
+		<meta name="keywords" content="HTML,CSS,JavaScript,Web Development,Website Development, Web Design,Website Design">
+		<meta name="author" content="Sibusiso Ncanywa">
 		<title> Welcome | LizHack SA Devs </title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
