editted the index page

--- a/version2/WebRoot/index.html
+++ b/version2/WebRoot/index.html
@@ -16,7 +16,7 @@
 
     <header>
         <!-- Navigation  -->
-        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+        <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
 
                 <!-- Logo  -->
@@ -35,10 +35,10 @@
                             <a class="nav-link" href="index.html"> Home </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href=""> Services </a>
+                            <a class="nav-link" href="index.html#services"> Services </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href=""> Contact Us </a>
+                            <a class="nav-link" href="index.html#contactUs"> Contact Us </a>
                         </li>
 
                     </ul>
@@ -105,38 +105,28 @@
     <hr class="my-4">
 
     <!-- Services -->
-    <section class="home-services">
+    <section id="services" class="home-services">
 
         <div class="home-services__collection">
 
             <div class="home-services__service">
                 <h3> Website Design </h3>
-                <p> All sites built use HTML 5 </p>
-                <a class="btn btn-primary" href="#" target="_blank"> see more </a>
+                <p> We design mocks ups that represent the idea </p>
             </div>
 
             <div class="home-services__service">
                 <h3> Website Development </h3>
-                <p> All sites built use HTML 5 </p>
-                <a class="btn btn-primary" href="#" target="_blank"> see more </a>
+                <p> We convert design idea into existing website </p>
             </div>
 
             <div class="home-services__service">
-                <h3> Software Design </h3>
+                <h3> T-shirt Design </h3>
                 <p> All sites built use HTML 5 </p>
-                <a class="btn btn-primary" href="#" target="_blank"> see more </a>
-            </div>
-
-            <div class="home-services__service">
-                <h3> Software Development </h3>
-                <p> All sites built use HTML 5 </p>
-                <a class="btn btn-primary" href="#" target="_blank"> see more </a>
             </div>
 
             <div class="home-services__service">
                 <h3> Logo Design </h3>
                 <p> All sites built use HTML 5 </p>
-                <a class="btn btn-primary" href="#" target="_blank"> see more </a>
             </div>
 
         </div>
@@ -173,7 +163,7 @@
 <!-- Footer -->
 <footer>
     <div class="details_collection">
-        <div class="details__info">
+        <div id="contactUs" class="details__info">
 
             <div class="details__info__contact">
                 <img src="Assets/img/logo2.png">
