finished adding the services pages

--- a/version3/WebRoot/index.html
+++ b/version3/WebRoot/index.html
@@ -29,13 +29,12 @@
                     <img src="Assets/img/logo2.png" alt="LizHack SA" class="navbar-brand__icon">
                 </a>
 
-                <a class="menu-btn" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-toggler menu-btn" data-toggle="collapse" data-target="#navbarResponsive">
                     <span class="menu-btn__burger"></span>
                 </a>
 
                 <div class="collapse navbar-collapse text-center" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html"> Home </a>
                         </li>
@@ -70,7 +69,11 @@
 
     <!-- Services -->
     <section id="services" class="services">
-
+    <div class="services__and__heading">
+        <h2>
+            Our Services
+        </h2>
+    </div>
     <div class="services__collection">
 
         <div class="services__service">
@@ -183,7 +186,7 @@
             Sibusiso Ncanywa completed his degree at Rhodes University in the year 2019. His majors were computer science and music theory and analysis, with a minor of sound technology. In his spare time he enjoys singing with Tshegofatso and Lukhanyiso, they sometimes
             record their music.
         </p>
-        <a class="btn btn-lg btn-secondary" href="http://" target="_blank" rel="noopener noreferrer"> Profile </a>
+        <a class="btn btn-lg btn-secondary" href="http://sibusisoncanywadevs.ml" target="_blank" rel="noopener noreferrer"> Profile </a>
     </div>
 
     <img class="second-director-img" src="Assets/img/Developer/LizHack_smile.png" alt="Director">
@@ -216,7 +219,7 @@
         </div>
 
         <div class="copy-right__LizHack">
-            <h4> LizHack SA &copy; 2019 </h4>
+            <h4>&copy; LizHack SA 2019 </h4>
         </div>
 
     </div>
