added 404 page and trusted parties

--- a/version3/WebRoot/services/logodesign.html
+++ b/version3/WebRoot/services/logodesign.html
@@ -207,6 +207,19 @@
 
 <!-- Footer -->
 <footer>
+
+    <div class="trusted-byWho">
+        <h4> proudly trusted by </h4>
+        <div class="trusted-byWho__collection">
+            <div class="trusted-byWho__item">
+                <img src="../Assets/img/trusted/littleArkMinistriesLogo.PNG" alt="Little Ark Ministries Logo">
+                <a href="http://littlearkministries.co.za" target="_blank" rel="noopener noreferrer"> Little Ark Ministries </a>
+            </div>
+
+        </div>
+    </div>
+
+
     <div class="details_collection">
         <div id="contactUs" class="details__info">
 
