added a few changes

--- a/version3/WebRoot/index.html
+++ b/version3/WebRoot/index.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="index.html"> Home </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#services"> Services </a>
+                            <a class="nav-link" href="index.html#ourServices"> Services </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html#contactUs"> Contact Us </a>
@@ -68,7 +68,7 @@
     <!-- include this later ourPhilosophy -->
 
     <!-- Services -->
-    <section id="services" class="services">
+    <section id="ourServices" class="services">
     <div class="services__and__heading">
         <h2>
             Our Services
