added responsive functionality

--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -41,13 +41,13 @@
 
                 <div class="collapse navbar-collapse text-center" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item nav-item-mod active">
                             <a class="nav-link" href="index.html"> Home </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item nav-item-mod">
                             <a class="nav-link" href="index.html#ourServices"> Services </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item nav-item-mod">
                             <a class="nav-link" href="index.html#contactUs"> Contact Us </a>
                         </li>
 
@@ -124,79 +124,93 @@
 </section>
 
     <!-- Testimonials-->
-    <section class="testimonials__and__heading">
+    <!-- Testimonials-->
+<section class="testimonials_and_heading">
+    <h2> Testimonials </h2>
 
-    <h2 class="display-4"> Testimonials </h2>
+    <div class="testimonials-collection">
 
-    <div class="testimonials__collection">
-
-        <div class="testimonials__testimonial">
-            <div class="logo__name">
-                <img src="Assets/img/testimonials/littleArkMinistriesLogo.PNG" alt="little Ark Ministries Logo">
-                <div class="social__name">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
-                        <h3> Little Ark Ministries </h3>
-                    </a>
-                    <div class="social">
-                        <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/Little-Ark-Ministries-103844167762633/">
-                            <i class="fab fa-facebook fa-2x"></i>
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/littlearkministries/">
-                            <i class="fab fa-instagram fa-2x"></i>
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer" href="https://www.littlearkministries.co.za">
+        <div class="testimonial">
+            <div class="testimonial-head">
+                <div class="testimonial-head-name">
+                    <img class="testimonial-head-name__img" src="Assets/img/testimonials/defaultLogo.jpg" alt="Kitchen Solutions Logo">
+                    <div class="testimonial-head-name__title">
+                        <h3> Lukhanyo Peter </h3>
+                        <span> Director of Little Ark Ministries </span>
+                    </div>
+                </div>
+                <div class="testimonial-head-Links">
+                    <div class="testimonial-head-Links-social">
+                        <div class="testimonial-head-Links-social__media">
+                            <a class="icon-size" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/Little-Ark-Ministries-103844167762633/">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a class="icon-size" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/littlearkministries/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </div>
+                        <a class="testimonial-head-Links-social__website" target="_blank" rel="noopener noreferrer" href="https://www.littlearkministries.co.za">
                             www.littlearkministries.co.za
                         </a>
                     </div>
                 </div>
             </div>
-            <p>
+            <p class="testimonial-body">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque saepe qui tenetur minima alias earum, rem officiis odit ex? Deserunt molestias ullam molestiae nesciunt quos vel, asperiores optio velit illo!
             </p>
         </div>
 
-        <div class="testimonials__testimonial">
-            <div>
-                <div class="logo__name">
-                    <img src="Assets/img/testimonials/defaultLogo.jpg" alt="Kitchen Solutions Logo">
-                    <div class="social__name">
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
-                            <h3> Kitchen Solutions </h3>
-                        </a>
-                        <div class="social">
-                            <a target="_blank" rel="noopener noreferrer" href="https://">
-                                <i class="fab fa-facebook fa-2x"></i>
-                            </a>
-                            <a target="_blank" rel="noopener noreferrer" href="https://">
-                                <i class="fab fa-instagram fa-2x"></i>
-                            </a>
-                        </div>
+        <div class="testimonial">
+            <div class="testimonial-head">
+                <div class="testimonial-head-name">
+                    <img class="testimonial-head-name__img" src="Assets/img/testimonials/defaultLogo.jpg" alt="Kitchen Solutions Logo">
+                    <div class="testimonial-head-name__title">
+                        <h3> Lukhanyo Peter </h3>
+                        <span> Director of Little Ark Ministries </span>
                     </div>
                 </div>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque saepe qui tenetur minima alias earum, rem officiis odit ex? Deserunt molestias ullam molestiae nesciunt quos vel, asperiores optio velit illo!
-                </p>
+                <div class="testimonial-head-Links">
+                    <div class="testimonial-head-Links-social">
+                        <div class="testimonial-head-Links-social__media">
+                            <a class="icon-size" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/Little-Ark-Ministries-103844167762633/">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a class="icon-size" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/littlearkministries/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </div>
+                        <a class="testimonial-head-Links-social__website" target="_blank" rel="noopener noreferrer" href="https://www.littlearkministries.co.za">
+                            www.littlearkministries.co.za
+                        </a>
+                    </div>
+                </div>
             </div>
-
+            <p class="testimonial-body">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque saepe qui tenetur minima alias earum, rem officiis odit ex? Deserunt molestias ullam molestiae nesciunt quos vel, asperiores optio velit illo!
+            </p>
         </div>
+
+
+    </div>
 
 </section>
 
     <!-- meet the director-->
     <section class="director">
-    <img src="Assets/img/Developer/sbuda.jpg" alt="Director">
-    <div class="director-bio">
-        <h4> Sibusiso "Lizalise" Ncanywa </h4>
-        <h5>Director</h5>
-        <p class="director-bio__txt">
-            Sibusiso Ncanywa obtained his Bachelor of science degree at Rhodes University in the year 2019. His majors were computer science and music theory and analysis, with a minor of sound technology. In his spare time he enjoys singing with Tshegofatso and
-            Lukhanyiso, they sometimes record their music.
-        </p>
-        <a class="btn btn-lg btn-secondary" href="http://sibusisoncanywadevs.ml" target="_blank" rel="noopener noreferrer"> Profile </a>
+    <div class="director__bio__img">
+        <div class="director-bio">
+            <h4> Sibusiso "Lizalise" Ncanywa </h4>
+            <h5>Director</h5>
+            <p class="director-bio__txt">
+                Sibusiso Ncanywa obtained his Bachelor of science degree at Rhodes University in the year 2019. His majors were computer science and music theory and analysis, with a minor of sound technology. In his spare time he enjoys singing with Tshegofatso and
+                Lukhanyiso, they sometimes record their music.
+            </p>
+            <a class="btn btn-lg btn-secondary" href="http://sibusisoncanywadevs.ml" target="_blank" rel="noopener noreferrer"> Profile </a>
+        </div>
+
+        <img class="second-director-img" src="Assets/img/Developer/LizHack_smile3.png" alt="Director">
+
     </div>
-
-    <img class="second-director-img" src="Assets/img/Developer/LizHack_smile.png" alt="Director">
-
 </section>
 
 </main>
