--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -79,6 +79,20 @@
         <h2>
             Our Services
         </h2>
+        <div class="alert alert-secondary">
+            <p class="service-request-note">
+                To use our services please email
+                <a href="mailto:lizhacksa@gmail.com">
+                    Lizhacksa@gmail.com
+                </a> OR send a whatsApp message to
+                <a href="tel:+27623654091">
+                    +27(0) 62 3654 091
+                </a> /
+                <a href="http://wa.me/27623654091" target="_blank" rel="noopener noreferrer">
+                    whatsApp Link
+                </a>
+            </p>
+        </div>
     </div>
     <div class="services__collection">
 
@@ -87,7 +101,7 @@
             <div class="content-txt">
                 <h3> Website Design </h3>
                 <p> We design mocks ups that represent the idea </p>
-                <a href="services/webdesign.html" class="btn btn-primary"> See more </a>
+                <a href="services/webdesign.html" class="collapse disabled btn btn-primary"> See more </a>
             </div>
         </div>
 
@@ -96,12 +110,13 @@
             <div class="content-txt">
                 <h3> Website Development </h3>
                 <p> We convert a design idea into a website </p>
-                <a href="services/webdev.html" class="btn btn-primary"> See more </a>
+                <a href="services/webdev.html" class="collapse disabled btn btn-primary"> See more </a>
             </div>
 
 
         </div>
 
+        <!--
         <div class="services__service">
             <img src="Assets/img/services/tshirtdesign.jpeg" alt="logo design service">
             <div class="content-txt">
@@ -110,13 +125,14 @@
                 <a href="services/tshirtdesign.html" class="btn btn-primary"> See more </a>
             </div>
         </div>
+        -->
 
         <div class="services__service">
             <img src="Assets/img/services/logodesign.jpeg" alt="logo design service">
             <div class="content-txt">
                 <h3> Logo Design </h3>
                 <p> We design and provide high quality results </p>
-                <a href="services/logodesign.html" class="btn btn-primary"> See more </a>
+                <a href="services/logodesign.html" class="collapse disabled btn btn-primary"> See more </a>
             </div>
         </div>
 
