ready to upload files

--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -149,7 +149,7 @@
         <div class="testimonial">
             <div class="testimonial-head">
                 <div class="testimonial-head-name">
-                    <img class="testimonial-head-name__img" src="Assets/img/testimonials/defaultLogo.jpg" alt="Kitchen Solutions Logo">
+                    <img class="testimonial-head-name__img" src="Assets/img/testimonials/littleArkMinistriesLogo.PNG" alt="Kitchen Solutions Logo">
                     <div class="testimonial-head-name__title">
                         <h3> Lukhanyo Peter </h3>
                         <span> Director of Little Ark Ministries </span>
@@ -172,41 +172,10 @@
                 </div>
             </div>
             <p class="testimonial-body">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque saepe qui tenetur minima alias earum, rem officiis odit ex? Deserunt molestias ullam molestiae nesciunt quos vel, asperiores optio velit illo!
+                To the reader, My name is Lukhanyo Peter, Little Ark Ministries Director. If you have no clue or idea, if you don't know where to start or to go, if your budget is tired or minimum, if you are turned away by organizations or companies because they don't
+                believe in you and in your company; I suggest that you try Lizhack SA for your website. They will give you a well developed and professional webpage. Thank you guyz😉
             </p>
         </div>
-
-        <div class="testimonial">
-            <div class="testimonial-head">
-                <div class="testimonial-head-name">
-                    <img class="testimonial-head-name__img" src="Assets/img/testimonials/defaultLogo.jpg" alt="Kitchen Solutions Logo">
-                    <div class="testimonial-head-name__title">
-                        <h3> Lukhanyo Peter </h3>
-                        <span> Director of Little Ark Ministries </span>
-                    </div>
-                </div>
-                <div class="testimonial-head-Links">
-                    <div class="testimonial-head-Links-social">
-                        <div class="testimonial-head-Links-social__media">
-                            <a class="icon-size" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/Little-Ark-Ministries-103844167762633/">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a class="icon-size" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/littlearkministries/">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </div>
-                        <a class="testimonial-head-Links-social__website" target="_blank" rel="noopener noreferrer" href="https://www.littlearkministries.co.za">
-                            www.littlearkministries.co.za
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <p class="testimonial-body">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque saepe qui tenetur minima alias earum, rem officiis odit ex? Deserunt molestias ullam molestiae nesciunt quos vel, asperiores optio velit illo!
-            </p>
-        </div>
-
-
     </div>
 
 </section>
