changed email address

--- a/WebRoot/404.html
+++ b/WebRoot/404.html
@@ -89,7 +89,7 @@
 
                 <a class="tel" href="tel:+27623654091"> +27(0) 62 3654 091 </a>
 
-                <a class="emailAdd" href="mailto:lizhacksa@gmail.com"> lizhacksa@gmail.com </a>
+                <a class="emailAdd" href="mailto:info@lizhacksa.ml"> info@lizhacksa.ml </a>
 
             </div>
 
