added a new email

--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -82,8 +82,8 @@
         <div class="alert alert-secondary">
             <p class="service-request-note">
                 To use our services please email
-                <a href="mailto:lizhacksa@gmail.com">
-                    Lizhacksa@gmail.com
+                <a href="mailto:info@lizhacksa.ml">
+                    info@lizhacksa.ml
                 </a> OR send a whatsApp message to
                 <a href="tel:+27623654091">
                     +27(0) 62 3654 091
