--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -187,10 +187,12 @@
             <h4> Sibusiso "Lizalise" Ncanywa </h4>
             <h5>Director</h5>
             <p class="director-bio__txt">
-                Sibusiso Ncanywa obtained his Bachelor of science degree at Rhodes University in the year 2019. His majors were computer science and music theory and analysis, with a minor of sound technology. In his spare time he enjoys singing with Tshegofatso and
-                Lukhanyiso, they sometimes record their music.
+                Sibusiso Ncanywa obtained his Bachelor of science degree from Rhodes University in the year 2019. His majors were Computer Science and Music Theory and Analysis. Sound Technology is one course which he enjoyed.
             </p>
             <a class="btn btn-lg btn-secondary" href="http://sibusisoncanywadevs.ml" target="_blank" rel="noopener noreferrer"> Profile </a>
+            <a class="btn btn-lg btn-secondary" href="https://www.linkedin.com/in/sibusiso-ncanywa-5b4a5186/" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-linkedin"></i> LinkedIn
+            </a>
         </div>
 
         <img class="second-director-img" src="Assets/img/Developer/LizHack_smile3.png" alt="Director">
