updated directors' bio

--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -187,7 +187,8 @@
             <h4> Sibusiso "Lizalise" Ncanywa </h4>
             <h5>Director</h5>
             <p class="director-bio__txt">
-                Sibusiso Ncanywa obtained his Bachelor of science degree from Rhodes University in the year 2019. His majors were Computer Science and Music Theory and Analysis. Sound Technology is one course which he enjoyed.
+                Sibusiso Ncanywa obtained his Bachelor of science degree from Rhodes University in the year 2019. His majors were Computer Science and Music Theory and Analysis. 
+                Website design and development is one of his major interests and he plans to develop this interest into a good business. 
             </p>
             <a class="btn btn-lg btn-secondary" href="http://sibusisoncanywadevs.ml" target="_blank" rel="noopener noreferrer"> Profile </a>
             <a class="btn btn-lg btn-secondary" href="https://www.linkedin.com/in/sibusiso-ncanywa-5b4a5186/" target="_blank" rel="noopener noreferrer">
