updated services notice width

--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -79,7 +79,7 @@
         <h2>
             Our Services
         </h2>
-        <div class="alert alert-secondary">
+        <div class="alert alert-secondary w-75 m-auto">
             <p class="service-request-note">
                 To use our services please email
                 <a href="mailto:info@lizhacksa.ml">
